minor spacing fixes

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -215,7 +215,7 @@ html, body {
   width: 50px;
   height: 50px;
   border-radius: 25px;
-  margin: 8px 16px;
+  margin: 6px 16px;
 }
 .mdl-demo section.section--footer {
   padding: 64px 0;
